--- a/src/dotnet-core-mssql-app/Properties/launchSettings.json
+++ b/src/dotnet-core-mssql-app/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "launchBrowser": true,
       "launchUrl": "http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
